testdata/baselines/reference/submodule/conformance/typeFromPrototypeAssignment3.errors.txt
bug26885.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
bug26885.js(10,5): error TS7023: 'get' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
bug26885.js(10,9): error TS7006: Parameter 'key' implicitly has an 'any' type.
bug26885.js(11,21): error TS2339: Property '_map' does not exist on type '{ get: (key: any) => any; }'.
bug26885.js(16,13): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== bug26885.js (5 errors) ====
    function Multimap3() {
        this._map = {};
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    };
    
    Multimap3.prototype = {
        /**
         * @param {string} key
         * @returns {number} the value ok
         */
        get(key) {
        ~~~
!!! error TS7023: 'get' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            ~~~
!!! error TS7006: Parameter 'key' implicitly has an 'any' type.
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get: (key: any) => any; }'.
        }
    }
    
    /** @type {Multimap3} */
    const map = new Multimap3();
                ~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const n = map.get('hi')